# gclog

./: .clang-format  .gitignore  CMakeLists.txt  Log.hpp  Logger.hpp  README.md  main.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
fuzz_test/: fuzz_tester.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
